# store-sales-forecasting

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.92741fac-9b33429d-21e152f0-b9bd17f.tmp
dashboard/: streamlit_app.py
dashboard/app_pages/: 01_overview.py  02_eda.py  03_features.py  04_models.py  05_kaggle.py  06_timeline.py
dashboard/utils/: data_loader.py
models/: weights.json
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_ensemble_and_submission.ipynb
src/: __init__.py  config.py  pipeline.py  pipeline_v15.py  pipeline_v16.py  pipeline_v17.py  pipeline_v17b.py  pipeline_v18.py  pipeline_v19.py  pipeline_v20.py  pipeline_v21.py  pipeline_v22.py
src/data/: loader.py  preprocessor.py
src/evaluation/: metrics.py  validation.py
src/features/: aggregations.py  builder.py  cross_features.py  external.py  hierarchical.py  lag_features.py  promotion.py  (+2 more)
submissions/: submission.csv  submission_fixed.csv  submission_v10.csv  submission_v3.csv  submission_v4.csv  submission_v5.csv  submission_v6.csv  submission_v7.csv  submission_v9.csv
tests/: conftest.py  test_builder.py  test_ensemble.py  test_external_features.py  test_features.py  test_loader.py  test_metrics.py  test_models.py  test_preprocessor.py  test_submission.py  test_validation.py
(+8 files in other folders)
