[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "store-sales-forecasting"
version = "0.1.0"
description = "Time series forecasting for Kaggle Store Sales competition"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "optuna>=3.0",
    "plotly>=5.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.11",
    "statsforecast>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
notebooks = [
    "jupyterlab>=4.0",
    "nbformat>=5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
